# expand-rgb-rs-py

./: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
src/: main.py
src/expand_rgb/: __init__.py  expand_rgb.pyi
